# openpipe

./: .gitignore  AGENT.md  BENCHMARKS.md  Cargo.toml  MCP.md  README.md  run-benchmarks.sh  run-tests.sh  test-integration.sh
.github/workflows/: ci.yml
demo/: docker-compose.yaml
demo/docker/: seed.sql
demo/project/: openpipe.yml
demo/project/models/: customer_metrics.sql  dim_customers.sql  fct_orders.sql  stg_customers.sql  stg_orders.sql  stg_payments.sql
demo/project/tests/: not_null_customer_id.sql  relationship_customer_fk.sql  unique_customer_id.sql
go-scheduler/: Dockerfile  go.mod  go.sum
go-scheduler/cmd/openpipe/: main.go
go-scheduler/internal/api/: handler.go
go-scheduler/internal/dag/: dag.go
go-scheduler/internal/executor/: arrow_writer.go  backfill.go  engine_client.go  run_manager.go  sql_executor.go  webhook.go
go-scheduler/internal/mcp/: server.go
go-scheduler/internal/scheduler/: scheduler.go
go-scheduler/tests/: scheduler_test.go
rust-engine/: Cargo.toml  Dockerfile
rust-engine/src/: main.rs  test_runner.rs
rust-engine/src/compiler/: mod.rs
rust-engine/src/lineage/: mod.rs
rust-engine/src/openlineage/: mod.rs
rust-engine/src/project/: mod.rs
rust-engine/tests/: compiler_test.rs
scripts/: time_ms.sh
web/: index.html  package-lock.json  package.json
web/src/: App.tsx
web/src/api/: client.ts
